construct service layer